# propagation-gap

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
activations/: README.md
analysis/: 01_behavioral_screening.ipynb  02_activation_probing.ipynb  03_surface_controls.ipynb  04_propagation_gap.ipynb
ci_bench/: __init__.py  config.py
ci_bench/data/: schema.py
ci_bench/data/construction/: c1_temporal.py  c2_obscurity.py  c3_synthetic.py  d1_contested.py  d2_rare.py  d3_degraded.py  k_known.py
ci_bench/eval/: bootstrap.py  metrics.py  scorer.py
ci_bench/models/: api_model.py  base.py  mlx_model.py  prompts.py
ci_bench/probes/: extract.py  train.py  transfer.py
data/questions/: c1_temporal.json  c2_obscurity.json  d1_contested.json  d2_rare.json  d3_degraded.json  k_known.json
data/responses/tier1/: gemma9b_raw.json  gemma9b_v4_summary.json  llama8b_v4_summary.json  mistral7b_raw.json  mistral7b_v4_summary.json  qwen25_7b_v4_summary.json
experiments/: common.py  exp1_behavioral_screening.py  exp2_activation_probing.py  exp3_output_readout.py  recompute_v4_consistent.py  run_all.sh
results/: bootstrap_gaps.json  logit_probe.json  power_analysis.json  surface_controls.json  threshold_sensitivity.json  v4_layer_trajectory.json  v4_probes.json
results/canonical/: experiment_1.json  experiment_2.json  experiment_3.json
results/probes/: gemma9b.json  llama8b.json  mistral7b.json  qwen25_7b.json
tests/: test_construction_dryrun.py  test_metrics.py  test_parse_confidence.py  test_prompts.py  test_schema.py  test_scorer.py
(+6 files in other folders)
